--- a/index.html
+++ b/index.html
@@ -22,20 +22,18 @@
       </nav>
     </header>
 
-    <main>
-      <div>
-        <!-- About section -->
-        <article id="about">
-          <h2>About</h2>
-          <section>
-            <h3>Hi! I'm Pete Thinkful</h3>
-            <div>
-              <img
-                class="image-circle"
-                src="images/pete-thinkful.png"
-                alt="Pete Thinkful"
-              />
+ <main>
+    <div>
+      <!-- About section -->
+      <article id="about">
+        <h2>About</h2>
+      <section>
+        <div class="content-wrapper">
+            <div class="image-container">
+              <img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful">
             </div>
+          <div class="text-container">
+            <h3>Hi! I'm Pete Thinkful</h3>
             <p>I'm an artist living in Denver, Colorado.</p>
             <p>As an artist, I'm interested in:</p>
             <ul>
@@ -43,64 +41,48 @@
               <li>Creating street graffiti art</li>
               <li>Connecting with like-minded artists</li>
             </ul>
-            <p>
-              Please feel free to take a look at my website and feel free to
-              <a href="#contact">contact me</a>.
-            </p>
-          </section>
-
-          <section>
-            <h3>Pete's Background</h3>
-            <p>
-              After graduating college, I became an art teacher and worked with
-              beginners and professionals. I love art and my works have been
-              featured in major art galleries across the globe.
-            </p>
-            <p>
-              If you're looking to hire an artist or if you're an artist looking
-              for a collaborator for your next project, please reach out! I'm so
-              excited to work with other artists to create new art.
-            </p>
-          </section>
-        </article>
+            <p>Please feel free to take a look at my website and feel free to <a href="#contact">contact me</a>.</p>
+          </div>
+        </div>
+      </section>
+      <!-- Pete's Background section -->
+      <section class="background-section">
+        <h3>Pete's Background</h3>
+        <div class="paragraphs">
+          <p>
+            After graduating college, I became an art teacher and worked with beginners and professionals. I love art and my works have been featured in major art galleries across the globe.
+          </p>
+          <p>
+            If you're looking to hire an artist or if you're an artist looking for a collaborator for your next project, please reach out! I'm so excited to work with other artists to create new art.
+          </p>
+        </div>
+      </section>
+      </article>
 
         <hr />
 
-        <!-- Portfolio section -->
-        <article id="portfolio">
-          <h2>Portfolio</h2>
-          <section>
-            <h3>Abstract Red</h3>
-            <div>
-              <img src="images/abstract-red.png" alt="Abstract Red" />
+      <!-- Portfolio section -->
+      <article id="portfolio">
+        <h2>Portfolio</h2>
+        <section>
+          <div class="project-list">
+            <div class="project">
+              <h3>Abstract Red</h3>
+              <img src="images/abstract-red.png" alt="Abstract Red">
+              <p>Vaporware wayfarers heirloom neutra disrupt. Activated charcoal waistcoat scenester hell of.</p>
             </div>
-            <p>
-              Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
-              waistcoat scenester hell of.
-            </p>
-          </section>
-
-          <section>
-            <h3>Spiral Zany</h3>
-            <div>
-              <img src="images/spiral-zany.png" alt="Spiral Zany" />
+            <div class="project">
+              <h3>Spiral Zany</h3>
+              <img src="images/spiral-zany.png" alt="Spiral Zany">
+              <p>Sriracha portland taxidermy cronut messenger bag, vegan distillery. Vaporware kickstarter air plant mumblecore food truck.</p>
             </div>
-            <p>
-              Sriracha portland taxidermy cronut messenger bag, vegan
-              distillery. Vaporware kickstarter air plant mumblecore food truck.
-            </p>
-          </section>
-
-          <section>
-            <h3>Melted Rainbow</h3>
-            <div>
-              <img src="images/melted-rainbow.png" alt="Melted Rainbow" />
+            <div class="project">
+              <h3>Melted Rainbow</h3>
+              <img src="images/melted-rainbow.png" alt="Melted Rainbow">
+              <p>Edison bulb single-origin coffee snackwave, actually ennui locavore shabby chic forage.</p>
             </div>
-            <p>
-              Edison bulb single-origin coffee snackwave, actually ennui
-              locavore shabby chic forage.
-            </p>
-          </section>
+          </div>
+        </article>
         </article>
 
         <hr />
